# booking_kit

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  basic_metadata.rs  basic_other.rs  basic_status_transistion.rs
src/: error.rs  lib.rs  manager.rs  traits.rs
src/model/: booking.rs  entities.rs  error.rs  events.rs  mod.rs  rules.rs  status.rs  traits.rs
tests/: booking_manager_test.rs  status_transition_test.rs
