[package]
name = "booking_kit"
version = "0.1.0"
edition = "2024"
authors = ["Jerry Maheswara <jerrymaheswara@gmail.com>"]
description = "Extensible booking toolkit for Rust with core types, status logic, events, and validation rules."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/booking_kit"
documentation = "https://docs.rs/booking_kit"
readme = "README.md"
keywords = ["booking", "reservation", "domain-driven"]
categories = ["web-programming", "data-structures"]

[dependencies]
chrono = "0.4.41"
thiserror = "2.0.12"