[package]
name = "booking_kit"
version = "0.1.0"
edition = "2024"
authors = ["Jerry Maheswara <jerrymaheswara@gmail.com>"]
description = "Extensible booking toolkit for Rust with core types, status logic, events, and validation rules."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/booking_kit"
documentation = "https://docs.rs/booking_kit"
readme = "README.md"
keywords = ["booking", "reservation", "kit", "generic", "library"]
categories = ["data-structures", "no-std", "data-structures"]

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }